Edited wiki page GettingStartedGuide through web user interface.

--- a/wiki/GettingStartedGuide.wiki
+++ b/wiki/GettingStartedGuide.wiki
@@ -1,4 +1,5 @@
 #summary a Getting Started Guide
+#labels Featured
 
 = A Getting Started Guide =
 This guide introduces the Zend Server Web API SDK for Java and provides a walk-through for getting started using the SDK.
