--- a/wiki/BuildingWebapiGuide.wiki
+++ b/wiki/BuildingWebapiGuide.wiki
@@ -15,7 +15,7 @@ Before webapi can be build following requirements must be satisfied:
 Here are steps to build webapi:
  # Run Eclipse.
  # Checkout webapi code from repository (details at http://code.google.com/p/zend-webapi/source/checkout) to your workspace.
- # On of the following variables must be set before build is performed:
+ # One of the following variables must be set before build is performed:
   * system environment GRADLE_HOME,
   * ant variable gradle.home (you can add it on Properties tab in Preferences->Ant->Runtime).
  # Build project in Eclipse.
